src/test/resources/30/expanded/valid/issue332-idspaces/EPUB/Content/C_bodymatter.xhtml
<?xml version="1.0" encoding="utf-8"?>
<html xmlns="http://www.w3.org/1999/xhtml">
	<head>
		<title>Lorem ipsum dolor - bodymatter</title>
		<link rel="stylesheet" href="../Style/style.css" type="text/css"/>
		<meta charset="utf-8" />
	</head>
	<body>
		<section>
			<h1>Hello world test:</h1>
			<p>Hello World !</p>
		</section>
	</body>
</html>
