src/test/resources/30/expanded/invalid/nav-invalid/OEBPS/nav.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en" lang="en">
   <head>
      <title>EPUB 3 Navigation Document</title>
      <meta charset="utf-8"/>
      <link rel="stylesheet" type="text/css" href="css/cnib.css"/>
   </head>
   <body>

   </body>
</html>